# rens

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: fmt.yml  tests.yml
rens-cli/: Cargo.toml
rens-cli/src/: cli.rs  cli_options.rs  main.rs  rens_target.rs  utils.rs
rens-cli/src/cli/: renaming.rs
rens-cli/src/cli/renaming/: options.rs
rens-cli/src/cli/renaming/options/: confirmations.rs  git.rs  paths.rs  pattern.rs  recursion.rs
rens-cli/src/cli_options/: confirmations.rs  mode.rs  recursion.rs  utils.rs
rens-common/: Cargo.toml
rens-common/src/: file.rs  file_name.rs  lib.rs
rens-common/src/sed_pattern/: flag.rs  mod.rs
rens-common/src/traits/: bool_ext.rs  iterator_ext.rs  mod.rs  path_ext.rs  result_iterator_ext.rs
rens-core/: Cargo.toml
rens-tui/: Cargo.toml
