[package]
name = "rens-cli"
version = "0.0.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive", "string"] }
clap-verbosity-flag = "2.2.0"
clap_complete_command = "0.5.1"
clap_mangen = "0.2.21"
dunce = "1.0.4"
env_logger = "0.11.3"
ignore = "0.4.22"
log = "0.4.21"
regex = "1.10.5"
rens-common = { path = "../rens-common" }
tap = "1.0.1"
thiserror = "1.0.61"
