[package]
name = "rens-cli"
version = "0.0.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
clap_complete_command = { workspace = true }
clap_mangen = { workspace = true }
dunce = "1.0.4"
env_logger = { workspace = true }
ignore = "0.4.22"
log = { workspace = true }
regex =  { workspace = true }
rens-common = { path = "../rens-common" }
tap = { workspace = true }
thiserror = { workspace = true }
