[package]
name = "rens-common"
version = "0.0.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
derive_more = { version = "1.0.0-beta.6", features = [
    "constructor",
    "display",
    "from_str",
] }
either = { version = "1.12.0", default-features = false }
regex = "1.10.5"
thiserror = "1.0.61"
