[package]
name = "rens-common"
version = "0.0.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
derive_more = { version = "1.0.0-beta.6", features = [
    "constructor",
    "display",
    "from_str",
] }
either = { version = "1.13.0", default-features = false }
regex =  { workspace = true }
thiserror = { workspace = true }
