[package]
name = "rens-tui"
version = "0.0.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
clap_complete_command = { workspace = true }
clap_mangen = { workspace = true }
crossterm = "0.27.0"
dunce = { workspace = true }
env_logger = { workspace = true }
ignore = { workspace = true }
log = { workspace = true }
ratatui = "0.27.0"
rens-common = { path = "../rens-common" }
tap = { workspace = true }
thiserror = { workspace = true }
